# system-lang

./: DESIGN.md  README.md  system-lang.cabal
app/: Main.hs
src/Lang/System/: AST.hs  Evaluator.hs  Parser.hs  Sizer.hs  Unifier.hs  Unique.hs
